# mastolists

./: LICENSE  README.md  pyproject.toml
mastolists/: mastolists.py
tests/: test_mastolists.py
